fix delete item
