# docs/swagger.json
@@ -575,7 +575,7 @@
                 }
             }
         },
-        "/orders/{id}/items/{item_id}": {
+        "/orders/{id}/items/{product_id}": {
             "delete": {
                 "security": [
                     {
@@ -602,8 +602,8 @@
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Item ID",
-                        "name": "item_id",
+                        "description": "Product ID",
+                        "name": "product_id",
                         "in": "path",
                         "required": true
                     },
@@ -1216,6 +1216,9 @@
         "go-shop-backend_internal_dto.OrderResponse": {
             "type": "object",
             "properties": {
+                "canceled_at": {
+                    "type": "string"
+                },
                 "completed_at": {
                     "type": "string"
                 },
@@ -1230,6 +1233,15 @@
                     "items": {
                         "$ref": "#/definitions/go-shop-backend_internal_dto.OrderItemResponse"
                     }
+                },
+                "paid_at": {
+                    "type": "string"
+                },
+                "payment_id": {
+                    "type": "string"
+                },
+                "provider_name": {
+                    "type": "string"
                 },
                 "status": {
                     "type": "string"
@@ -1322,6 +1334,9 @@
                     "type": "string"
                 },
                 "price": {
+                    "type": "integer"
+                },
+                "reserved": {
                     "type": "integer"
                 },
                 "slug": {
